--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "cirrus-ui": "^0.5.5",
     "compression": "^1.7.1",
+    "normalize.css": "^8.0.1",
     "polka": "next",
     "sirv": "^0.4.0",
     "socket.io": "^2.3.0",
