--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "autoprefixer": "^9.7.4",
     "cirrus-ui": "^0.5.5",
     "compression": "^1.7.1",
+    "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "polka": "next",
     "sirv": "^0.4.0",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "svelte-preprocess": "^3.4.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
