--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "polka": "next",
+    "project-name-generator": "^2.1.7",
     "sirv": "^0.4.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
