--- a/package.json
+++ b/package.json
@@ -13,38 +13,37 @@
   },
   "dependencies": {
     "@joeattardi/emoji-button": "^2.12.1",
-    "@simonwep/pickr": "^1.5.1",
-    "autoprefixer": "^9.7.4",
-    "cirrus-ui": "^0.5.5",
+    "@simonwep/pickr": "^1.8.0",
+    "autoprefixer": "^9.8.6",
+    "cirrus-ui": "^0.5.31",
     "compression": "^1.7.1",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "emojis-list": "^3.0.0",
     "network-avatar-picker": "^1.4.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "polka": "next",
-    "project-name-generator": "^2.1.7",
-    "sirv": "^0.4.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "svelte-emoji-selector": "^1.0.1",
-    "svelte-preprocess": "^3.4.0"
+    "project-name-generator": "^2.1.9",
+    "sirv": "^0.4.6",
+    "socket.io": "^2.4.1",
+    "socket.io-client": "^2.4.0",
+    "svelte-preprocess": "^3.9.12"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "sapper": "^0.27.0",
-    "svelte": "^3.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.13.15",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
-    "rollup": "^1.20.0",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/runtime": "^7.13.10",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-replace": "^2.4.2",
+    "npm-run-all": "^4.1.5",
+    "rollup": "^2.45.0",
     "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^4.0.4"
+    "rollup-plugin-svelte": "^6.1.1",
+    "rollup-plugin-terser": "^4.0.4",
+    "sapper": "^0.27.16",
+    "svelte": "^3.37.0"
   }
 }
